# hgrad

./: .gitignore  README.md  hgrad.cabal  micrograd.cabal
bench/: Bench.hs
exe/: Main.hs
src/: Engine.hs  Graph.hs  Neuron.hs
src/Engine/: Network.hs  Visualize.hs
src/Engine/Network/: Train.hs
src/Graph/: Dot.hs
test/: Main.hs
test_py/: test_more_ops.py  test_sanity.py
