cabal-version: 3.0
-- The cabal-version field refers to the version of the .cabal specification,
-- and can be different from the cabal-install (the tool) version and the
-- Cabal (the library) version you are using. As such, the Cabal (the library)
-- version used must be equal or greater than the version stated in this field.
-- Starting from the specification version 2.2, the cabal-version field must be
-- the first thing in the cabal file.
name: hgrad
version:            0.1.0.0
synopsis: Micrograd in Haskell
-- description:
license: MIT
license-file: LICENSE
author: Nicolas Audinet de Pieuchon
maintainer: nic.audinet27@gmail.com
category: Machine Learning
build-type: Simple

common warnings
    ghc-options: -Wall

library
    import: warnings
    default-language: Haskell2010
    hs-source-dirs: src
    exposed-modules:
        Engine
      , Engine.Network
      , Engine.Network.Train
      , Engine.Visualize
      , Graph
    build-depends:
        base ^>=4.17.2.1
      , containers
      , MonadRandom
      , process
      , transformers

executable hgrad
    import: warnings
    default-language: Haskell2010
    hs-source-dirs: exe
    main-is: Main.hs
    build-depends:
        base ^>=4.17.2.1
      , hgrad
      , Chart
      , Chart-diagrams
      , MonadRandom
      , transformers

test-suite hgrad-test
    import: warnings
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
    ghc-options:
      -Wno-orphans
      -Wno-name-shadowing
    build-depends:
        base ^>=4.17.2.1
      , hgrad
      , MonadRandom
      , tasty
      , tasty-hunit
      , tasty-quickcheck
      , transformers

benchmark hgrad-bench
    type: exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs: bench
    main-is: Bench.hs
    build-depends:
        base ^>=4.17.2.1
      , hgrad
      , criterion
      , deepseq
      , MonadRandom
      , transformers
